# confide

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  RESULTS.md  pyproject.toml
docs/: THREAT_MODEL.md
results/: llama3b.json  llama8b.json  qwen7b.json
src/confide/: __init__.py  cli.py  model_agent.py  reference.py  report.py  scenarios.py  scoring.py  taxonomy.py  types.py
tests/: test_cli.py  test_import.py  test_model_agent.py  test_reference.py  test_report.py  test_scenarios.py  test_scoring.py  test_taxonomy.py
