[project]
name = "confide"
version = "0.0.1"
description = "Domain-specialized privacy / contextual-integrity leakage benchmark for health and fintech. Synthetic-by-design; verified disclosure, no LLM judge in scoring."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bamdad Dashtban" }]
dependencies = ["pydantic>=2.6"]

[project.scripts]
confide = "confide.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/confide"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.14", "mypy>=1.14", "pre-commit>=4"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
